# tui-explorer

./: CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
