[project]
name = "tui-explorer"
version = "0.1.0"
description = "A yazi-inspired three-pane terminal file manager built with Textual"
requires-python = ">=3.14"
dependencies = [
    "textual>=7.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
